--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 *{
     box-sizing:border-box ;
     color: #777;
+    
 }
 :root{
     --ff-primary:'Baloo 2', cursive;
@@ -23,7 +24,7 @@
     --bs:0.25em 0.25em 0.80em rgba(0,0,0,.5),
     0.125em 0.12em 0.25em rgba(0,0,0,.15); 
 }
-@media(min-width:800px)
+@media  (min-width:600px)
 {
     :root{
         --fs-h1:3.5rem;
@@ -31,7 +32,17 @@
         --fs-h3:1.5rem;
         --fs-body:1.25rem;
     }
+
 }
+
+@media  only screen and(max-width:600px){
+.box{
+    width:100%;
+}
+}
+
+    
+
 /*style*/
 img{
     display:block;
@@ -83,6 +94,7 @@ display:block;
 }
 section{ 
     padding:5em 2em;
+margin-bottom: 0%;
 }
 
 /*intro style*/
@@ -155,7 +167,7 @@ padding:0;
 .main_nav{text-align: center;
     font-size: 1.1em;
     font-weight: lighter;
-    border-bottom: 1px solid rgba(99, 104, 104, 0.3) ;}
+    border-bottom: 1px solid rgba(158, 250, 250, 0.3) ;}
     .main_nav li{
         padding:0.5%;
     }
@@ -163,21 +175,228 @@ padding:0;
     
     object-fit: cover;
     background-size:cover ;
-    padding-bottom:50px ;
-    background-image: url(./images/background.jpg);
-    background-color: #16e0bd;
-    background-blend-mode:multiply;
+    padding-bottom:20px ;
+   
+    background-color: black;
+   
     position:relative;
 }
 .band_name {
     text-align: center;
     margin: 0;
     font-size: 4em;
+    text-shadow: 1px 1px 1px #919191,
+    1px 2px 1px #919191,
+    1px 3px 1px #919191,
+    1px 4px 1px #919191,
+    1px 5px 1px #919191,
+    1px 1px 10px rgba(0,0,0,.5),
+    1px 2px 20px rgba(0,0,0,.5),
+    1px 3px 30px rgba(0,0,0,.5); 
     
 }
+/*ABOUT ME*/
+#aboutme{
+    margin: 0%;
+}
 
-/*fotter style*/
-.fotter-style
+
+.background{
+   height: 800px;
+    
+   background-image: url(images/aboutme6.jpeg);
+   background-attachment: fixed;
+   background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.inner-box{
+    max-width:800px;
+    position:relative;
+    display:block;
+    top:50%;
+    left:50%;
+   height: fit-content;
+    transform:translate(-50%,-50%) ;
+background:rgba(255,255,255,0.4);
+box-shadow:var(--bs);
+padding:30px;
+text-align:center;
+height:400px;
+}
+.aboutme-head{
+    color: aliceblue;
+    text-shadow: 1px 1px 1px #919191,
+    1px 2px 1px #919191,
+    1px 3px 1px #919191,
+    1px 4px 1px #919191,
+    1px 5px 1px #919191,
+    1px 1px 10px rgba(0,0,0,.5),
+    1px 2px 20px rgba(0,0,0,.5),
+    1px 3px 30px rgba(0,0,0,.5);
+
+}
+.aboutme-content strong{
+    color: aquamarine;
+}
+.aboutme-content{
+    color:#303030;
+}
+.box{
+    background-color:#303030;
+    box-shadow: var(--bs);
+}
+
+
+
+
+
+/*project style*/
+.card {
+    display: grid;
+    grid-template-columns: 300px;
+    grid-template-rows: 210px 210px ;
+    grid-template-areas: "image" "text" ;
+    border-radius: 18px;
+    background: white;
+    box-shadow: 5px 5px 15px rgba(0,0,0,0.9);
+    font-family: roboto;
+    text-align: center;
+    margin-left: auto;
+  }
+  .card-image {
+    grid-area: image;
+  }
+  .card-text { 
+    grid-area: text;
+  }
+  .card-image {
+    grid-area: image;
+    background: url("./images/project2.jpeg");
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    background-size: cover;
+  }
+  .card-image1{ grid-area: image;
+    background: url("./images/Screenshot\ \(350\).png");
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    background-size: cover;
+      
+  }
+ @media  screen {
+    
+}
+ 
+  
+#project1{
+    display: grid;
+  grid-template-columns:1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+#project
+{
+    flex-direction: column;
+     padding:200px;
+     margin: 0 auto ;
+     background-color:  #777;
+     
+     
+}
+
+.project-heading{
+    text-align: center;
+    color:white;
+    text-shadow: 1px 1px 1px #919191,
+    1px 2px 1px #919191,
+    1px 3px 1px #919191,
+    1px 4px 1px #919191,
+    1px 5px 1px #919191,
+    1px 1px 5px white,
+    1px 2px 6px white;
+    padding-bottom:80px ;
+    
+}
+.project{
+    display:flex;
+    align-items:center;
+justify-content:center;
+flex-direction:column;
+
+}
+.card:hover {
+    transform: scale(1.15);
+    box-shadow: 5px 5px 15px rgba(0,0,0,0.6);
+  }
+  .card {
+
+    transition: 0.5s ease;
+    cursor: pointer;
+    margin:30px;
+  }
+
+
+/*SKILLS STYLE*/
+#skills{
+    background-color:#777;
+}
+.white{
+    background-color: #fff;
+    box-shadow:var(--bs) ;
+}
+.accent{
+    background-color: #16e0bd;
+}
+.topic{
+    color:#fff;
+}
+.skills-head{
+    text-align: center;
+color: aliceblue;
+text-shadow: 1px 1px 1px #919191,
+    1px 2px 1px #919191,
+    1px 3px 1px #919191,
+    1px 4px 1px #919191,
+    1px 5px 1px #919191,
+    1px 1px 10px rgba(0,0,0,.5),
+    1px 2px 20px rgba(0,0,0,.5),
+    1px 3px 30px rgba(0,0,0,.5);
+}
+
+/*CONTACT ME STYLE*/
+.content{
+    align-self: center;background-color:black;
+}
+.content-2,.contact-heading{
+    text-align: center;
+}
+.name,.email,.subject{
+    color: white;
+    padding:16px 32px;
+    
+   
+}
+.message{
+    padding:15px 32px;
+}
+div.form{
+    display :block;
+    text-align:center;
+}
+.form {
+    display:inline-block;
+    margin-left: auto;
+    margin-right:auto ;
+    text-align: left;
+}
+.button
 {
     background-color: #16e0bd;
+   padding:15px;
+}
+.fotter-style{
+    background-color:black; 
+margin-top:0 ;
 }
