--- a/style.css
+++ b/style.css
@@ -32,10 +32,14 @@
         background-color: #303030;
     }
     }
-    @media  only screen and(max-width:480px) and (min-width:1200px){
+    @media  only screen and(max-width:480px) {
 
-        .car-image1{
-            background-color: #303030;
+        .card,.card-image1,.card-text{
+        
+            padding:100px;
+            width:100%;
+
+
         }
         }
     
@@ -242,7 +246,7 @@ height:400px;
 .box{
     background-color:#303030;
     box-shadow: var(--bs);
-    align-self:auto;
+    align-self:center;
 }
 
 
@@ -258,9 +262,9 @@ height:400px;
     border-radius: 18px;
     background: white;
     box-shadow: 5px 5px 15px rgba(0,0,0,0.9);
-    font-family: roboto;
+    font-family:var(--ff-primary);
     text-align: center;
-    margin-left: auto;
+    
     margin:auto;
 
   }
@@ -278,7 +282,8 @@ text-size-adjust:auto ;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
     background-size: cover;
-    background-position: center;
+   background-position: center;
+    
     
    
       
