--- a/style.css
+++ b/style.css
@@ -26,22 +26,7 @@
 }
 
 
-@media  only screen and(max-width:480px) and (min-width:1200px){
-
-    body{
-        background-color: #303030;
-    }
-    }
-    @media  only screen and(max-width:480px) {
-
-        .card,.card-image1,.card-text{
-        
-            padding:100px;
-            width:100%;
-
-
-        }
-        }
+   
     
 
 /*style*/
@@ -254,86 +239,24 @@ height:400px;
 
 
 /*project style*/
-.card {
-    display:grid;
-    grid-template-columns:auto;
-    grid-template-rows:270px  150px ;
-    grid-template-areas: "image" "text" ;
-    border-radius: 18px;
-    background: white;
-    box-shadow: 5px 5px 15px rgba(0,0,0,0.9);
-    font-family:var(--ff-primary);
-    text-align: center;
-    
-    margin:auto;
 
-  }
-  .card-image1 {
-    grid-area: image;
-  }
-  .card-text { 
-    grid-area: text;
-text-overflow:inherit;
-text-size-adjust:auto ;
-  }
-  
-  .card-image1{ grid-area: image;
-    background: url("./images/Screenshot\ \(350\).png");
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    background-size: cover;
-   background-position: center;
-    
-    
-   
-      
-  }
- 
- 
-  
-#project1{
-    display: grid;
-  grid-template-columns:1fr ;
-  grid-template-rows: 1fr;
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
-}
-#project
-{
-    flex-direction: column;
-     padding:200px;
-     margin: 0 auto ;
-     background-color:  #777;
-     
-     
-}
 
 .project-heading{
     text-align: center;
-    color:white;
+    color: black;
     text-shadow: 1px 1px 1px #919191,
-    1px 2px 1px #919191,
-    1px 3px 1px #919191,
-    1px 4px 1px #919191,
-    1px 5px 1px #919191,
-    1px 1px 5px white,
-    1px 2px 6px white;
-    padding-bottom: 20px;
-    
+        1px 2px 1px #919191,
+        1px 3px 1px #919191,
+        1px 4px 1px #919191,
+        1px 5px 1px #919191,
+        1px 1px 10px rgba(0,0,0,.5),
+        1px 2px 20px rgba(0,0,0,.5),
+        1px 3px 30px rgba(0,0,0,.5);
+        padding:40px;
 }
 
 
 
-.card:hover {
-    transform: scale(1.15);
-    box-shadow: 5px 5px 15px rgba(0,0,0,0.6);
-  }
-  .card {
-align-self: center;
-    transition: 0.5s ease;
-    cursor: pointer;
-    margin:20px;
-  }
 
 
 /*SKILLS STYLE*/
@@ -398,3 +321,61 @@ div.form{
     background-color:black; 
 margin-top:0 ;
 }
+
+
+
+
+/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+.wrapper{
+    display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  grid-auto-rows: minmax(100px, auto);
+  width:100%;
+}
+.flip-card {
+    background-color: transparent;
+    width: 300px;
+    height: 200px;
+    margin:auto;
+    background-size: cover;
+    perspective: 1000px; /*to add 3d effect*/
+  }
+  
+  /* This container is needed to position the front and back side */
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+  }
+  
+  /* Do an horizontal flip when you move the mouse over the flip box container */
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  /* Position the front and back side */
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden; /* Safari */
+    backface-visibility: hidden;
+  }
+  
+  /* Style the front side (fallback if image is missing) */
+  .flip-card-front {
+    background-color: #bbb;
+    color: black;
+   
+  }
+  
+  /* Style the back side */
+  .flip-card-back {
+    background-color:#16e0bd;
+    color: white;
+    transform: rotateY(180deg);
+  }
